--- a/index.html
+++ b/index.html
@@ -1,1 +1,34 @@
 
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Page Title</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" media="screen" href="assets/CSS/style.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="assets/CSS/reset.css" />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="assets/javascript/game.js"></script>
+</head>
+<body>
+    <div>Title</div>
+<div>Instructions</div>
+<div>
+ <button onclick="startGame()">Start</button>
+  <div>Random Number Generator: <span id="number"></span></div>
+  <div>
+    <div>Wins: <span id="wins"></span></div>
+    <div>Losses: <span id="losses"></span></div>
+  </div>
+</div>
+<div>
+  <button id="crystalOne">Crystal 1</button>
+  <button id="crystalTwo">Crystal 2</button>
+  <button id="crystalThree">Crystal 3</button>
+  <button id="crystalFour">Crystal 4</button>
+</div>
+<div>Player's Score Counter: <span id="playerScore"></span></div>
+<button onclick="reset()">Reset</button>
+</body>
+</html>
